src/pyupgrade/snapshots/ruff__pyupgrade__tests__U003_U003.py.snap
---
source: src/pyupgrade/mod.rs
expression: checks
---
- kind:
    TypeOfPrimitive: Str
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 8
  fix:
    patch:
      content: str
      location:
        row: 1
        column: 0
      end_location:
        row: 1
        column: 8
- kind:
    TypeOfPrimitive: Bytes
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 9
  fix:
    patch:
      content: bytes
      location:
        row: 2
        column: 0
      end_location:
        row: 2
        column: 9
- kind:
    TypeOfPrimitive: Int
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 7
  fix:
    patch:
      content: int
      location:
        row: 3
        column: 0
      end_location:
        row: 3
        column: 7
- kind:
    TypeOfPrimitive: Float
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 8
  fix:
    patch:
      content: float
      location:
        row: 4
        column: 0
      end_location:
        row: 4
        column: 8
- kind:
    TypeOfPrimitive: Complex
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 8
  fix:
    patch:
      content: complex
      location:
        row: 5
        column: 0
      end_location:
        row: 5
        column: 8

