src/pyupgrade/snapshots/ruff__pyupgrade__tests__U006_U006.py.snap
---
source: src/pyupgrade/mod.rs
expression: checks
---
- kind:
    UsePEP585Annotation: List
  location:
    row: 4
    column: 9
  end_location:
    row: 4
    column: 20
  fix:
    patch:
      content: list
      location:
        row: 4
        column: 9
      end_location:
        row: 4
        column: 20
- kind:
    UsePEP585Annotation: List
  location:
    row: 11
    column: 9
  end_location:
    row: 11
    column: 13
  fix:
    patch:
      content: list
      location:
        row: 11
        column: 9
      end_location:
        row: 11
        column: 13
- kind:
    UsePEP585Annotation: List
  location:
    row: 18
    column: 9
  end_location:
    row: 18
    column: 15
  fix:
    patch:
      content: list
      location:
        row: 18
        column: 9
      end_location:
        row: 18
        column: 15
- kind:
    UsePEP585Annotation: List
  location:
    row: 25
    column: 9
  end_location:
    row: 25
    column: 14
  fix:
    patch:
      content: list
      location:
        row: 25
        column: 9
      end_location:
        row: 25
        column: 14

