src/pyupgrade/snapshots/ruff__pyupgrade__tests__U008_U008.py.snap
---
source: src/pyupgrade/mod.rs
expression: checks
---
- kind: SuperCallWithParameters
  location:
    row: 17
    column: 17
  end_location:
    row: 17
    column: 35
  fix:
    patch:
      content: super()
      location:
        row: 17
        column: 17
      end_location:
        row: 17
        column: 35
- kind: SuperCallWithParameters
  location:
    row: 18
    column: 8
  end_location:
    row: 18
    column: 26
  fix:
    patch:
      content: super()
      location:
        row: 18
        column: 8
      end_location:
        row: 18
        column: 26
- kind: SuperCallWithParameters
  location:
    row: 19
    column: 8
  end_location:
    row: 22
    column: 9
  fix:
    patch:
      content: super()
      location:
        row: 19
        column: 8
      end_location:
        row: 22
        column: 9
- kind: SuperCallWithParameters
  location:
    row: 36
    column: 8
  end_location:
    row: 36
    column: 28
  fix:
    patch:
      content: super()
      location:
        row: 36
        column: 8
      end_location:
        row: 36
        column: 28
- kind: SuperCallWithParameters
  location:
    row: 50
    column: 12
  end_location:
    row: 50
    column: 32
  fix:
    patch:
      content: super()
      location:
        row: 50
        column: 12
      end_location:
        row: 50
        column: 32

