src/pyupgrade/snapshots/ruff__pyupgrade__tests__U009_U009_1.py.snap
---
source: src/pyupgrade/mod.rs
expression: checks
---
- kind: PEP3120UnnecessaryCodingComment
  location:
    row: 2
    column: 0
  end_location:
    row: 3
    column: 0
  fix:
    patch:
      content: ""
      location:
        row: 2
        column: 0
      end_location:
        row: 3
        column: 0

