src/pyupgrade/snapshots/ruff__pyupgrade__tests__U010_U010.py.snap
---
source: src/pyupgrade/mod.rs
expression: checks
---
- kind:
    UnnecessaryFutureImport:
      - generators
      - nested_scopes
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 48
  fix:
    patch:
      content: ""
      location:
        row: 1
        column: 0
      end_location:
        row: 2
        column: 0
- kind:
    UnnecessaryFutureImport:
      - unicode_literals
      - with_statement
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 55
  fix:
    patch:
      content: ""
      location:
        row: 2
        column: 0
      end_location:
        row: 3
        column: 0
- kind:
    UnnecessaryFutureImport:
      - absolute_import
      - division
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 48
  fix:
    patch:
      content: ""
      location:
        row: 3
        column: 0
      end_location:
        row: 4
        column: 0
- kind:
    UnnecessaryFutureImport:
      - generator_stop
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 37
  fix:
    patch:
      content: ""
      location:
        row: 4
        column: 0
      end_location:
        row: 5
        column: 0
- kind:
    UnnecessaryFutureImport:
      - generator_stop
      - print_function
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 53
  fix:
    patch:
      content: ""
      location:
        row: 5
        column: 0
      end_location:
        row: 6
        column: 0
- kind:
    UnnecessaryFutureImport:
      - generators
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 49
  fix:
    patch:
      content: from __future__ import invalid_module
      location:
        row: 6
        column: 0
      end_location:
        row: 6
        column: 49
- kind:
    UnnecessaryFutureImport:
      - generator_stop
  location:
    row: 9
    column: 4
  end_location:
    row: 9
    column: 41
  fix:
    patch:
      content: ""
      location:
        row: 9
        column: 0
      end_location:
        row: 10
        column: 0
- kind:
    UnnecessaryFutureImport:
      - generators
  location:
    row: 10
    column: 4
  end_location:
    row: 10
    column: 37
  fix:
    patch:
      content: pass
      location:
        row: 10
        column: 4
      end_location:
        row: 10
        column: 37
- kind:
    UnnecessaryFutureImport:
      - generator_stop
  location:
    row: 13
    column: 4
  end_location:
    row: 13
    column: 41
  fix:
    patch:
      content: ""
      location:
        row: 13
        column: 0
      end_location:
        row: 14
        column: 0
- kind:
    UnnecessaryFutureImport:
      - generators
  location:
    row: 14
    column: 4
  end_location:
    row: 14
    column: 53
  fix:
    patch:
      content: from __future__ import invalid_module
      location:
        row: 14
        column: 4
      end_location:
        row: 14
        column: 53

