src/pyupgrade/snapshots/ruff__pyupgrade__tests__U012_U012.py.snap
---
source: src/pyupgrade/mod.rs
expression: checks
---
- kind: UnnecessaryEncodeUTF8
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 21
  fix:
    patch:
      content: "b\"foo\""
      location:
        row: 2
        column: 0
      end_location:
        row: 2
        column: 21
- kind: UnnecessaryEncodeUTF8
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 18
  fix:
    patch:
      content: "b\"foo\""
      location:
        row: 3
        column: 0
      end_location:
        row: 3
        column: 18
- kind: UnnecessaryEncodeUTF8
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 14
  fix:
    patch:
      content: "b\"foo\""
      location:
        row: 4
        column: 0
      end_location:
        row: 4
        column: 14
- kind: UnnecessaryEncodeUTF8
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 20
  fix:
    patch:
      content: "b\"foo\""
      location:
        row: 5
        column: 0
      end_location:
        row: 5
        column: 20
- kind: UnnecessaryEncodeUTF8
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 22
  fix:
    patch:
      content: "b\"foo\""
      location:
        row: 6
        column: 0
      end_location:
        row: 6
        column: 22
- kind: UnnecessaryEncodeUTF8
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 30
  fix:
    patch:
      content: "b\"foo\""
      location:
        row: 7
        column: 0
      end_location:
        row: 7
        column: 30
- kind: UnnecessaryEncodeUTF8
  location:
    row: 8
    column: 0
  end_location:
    row: 14
    column: 1
  fix:
    patch:
      content: "b\"\"\"\nLorem\n\nIpsum\n\"\"\""
      location:
        row: 8
        column: 0
      end_location:
        row: 14
        column: 1
- kind: UnnecessaryEncodeUTF8
  location:
    row: 26
    column: 0
  end_location:
    row: 26
    column: 27
  fix:
    patch:
      content: ""
      location:
        row: 26
        column: 19
      end_location:
        row: 26
        column: 26
- kind: UnnecessaryEncodeUTF8
  location:
    row: 44
    column: 0
  end_location:
    row: 44
    column: 31
  fix:
    patch:
      content: ""
      location:
        row: 44
        column: 23
      end_location:
        row: 44
        column: 30
- kind: UnnecessaryEncodeUTF8
  location:
    row: 46
    column: 0
  end_location:
    row: 46
    column: 39
  fix:
    patch:
      content: ""
      location:
        row: 46
        column: 23
      end_location:
        row: 46
        column: 38
- kind: UnnecessaryEncodeUTF8
  location:
    row: 48
    column: 0
  end_location:
    row: 48
    column: 23
  fix:
    patch:
      content: "br\"fo\\o\""
      location:
        row: 48
        column: 0
      end_location:
        row: 48
        column: 23
- kind: UnnecessaryEncodeUTF8
  location:
    row: 49
    column: 0
  end_location:
    row: 49
    column: 22
  fix:
    patch:
      content: "b\"foo\""
      location:
        row: 49
        column: 0
      end_location:
        row: 49
        column: 22
- kind: UnnecessaryEncodeUTF8
  location:
    row: 50
    column: 0
  end_location:
    row: 50
    column: 23
  fix:
    patch:
      content: "bR\"fo\\o\""
      location:
        row: 50
        column: 0
      end_location:
        row: 50
        column: 23
- kind: UnnecessaryEncodeUTF8
  location:
    row: 51
    column: 0
  end_location:
    row: 51
    column: 22
  fix:
    patch:
      content: "b\"foo\""
      location:
        row: 51
        column: 0
      end_location:
        row: 51
        column: 22
- kind: UnnecessaryEncodeUTF8
  location:
    row: 52
    column: 6
  end_location:
    row: 52
    column: 20
  fix:
    patch:
      content: "b\"foo\""
      location:
        row: 52
        column: 6
      end_location:
        row: 52
        column: 20

